--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.1.8",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-find-by-reference": "^1.0.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
